syntax = "proto3";

package pb;

option go_package = "./;pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Asset {
  enum ServiceType {
    UNKNOWN = 0;
    CONSUMPTION_TURN_UP = 1;
    CONSUMPTION_TURN_DOWN = 2;
    GENERATION_TURN_UP = 3;
    GENERATION_TURN_DOWN = 4;
  }

  string id = 1;
  string ref = 2;
  string name = 3;
  string import_meter_id = 4;
  string export_meter_id = 5;
  string provider_id = 6;
  float voltage_level = 7;
  int32 max_runtime_minutes = 8;
  float max_capacity = 9;
  double latitude = 10;
  double longitude = 11;
  repeated ServiceType services  = 12;
}

service InventoryManagement {
  rpc RegisterAsset(Asset) returns (Asset);
}